gcc/testsuite/rust/rustc/ui/keyword/extern/keyword-extern-as-identifier-expr.rs
fn main() {
    let s = extern::foo::Bar; // { dg-error "" "" { target *-*-* } }
}

